<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_auth"
        android:orderInCategory="99"
        android:icon="@mipmap/disabled"
        android:title="@string/action_auth"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_flash"
        android:orderInCategory="100"
        android:title="@string/action_flash"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_debug"
        android:orderInCategory="100"
        android:title="Debug"
        app:showAsAction="never" />

</menu>