<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/layout_background_section"
            android:orientation="vertical"
            android:paddingBottom="2.5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_output"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:weightSum="2" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/redButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2.5dp"
                        android:background="@drawable/btn_orange"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/orange"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/blueButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2.5dp"
                        android:background="@drawable/btn_blue"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/blue"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/greenButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2.5dp"
                        android:background="@drawable/btn_green"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/green"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/offButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_off"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/off"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.8"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/trafficlight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/nxp"
                        android:src="@drawable/ntagblue" />

                    <TextView
                        android:id="@+id/textSelectColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tap_switch_off"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/Temp_Sensor_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/temperature"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/LCD_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/lcd"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/Ndef_Scroll_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/scroll"
                android:textColor="#000000"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/layout_background_section"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_input_led"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TransferDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transferdirection"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textCallback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readConf"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/nxp_pressed_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/no_pressed" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>