<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/layoutResetMemoryStatistics"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/layout_background_section"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_input_reset_tag"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resetmemorydata_datarateCallback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_back"
            android:minLines="2"
            android:paddingBottom="2.5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2.5dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/layoutResetMemoryStatistics"
        android:layout_margin="5dp"
        android:background="@drawable/layout_background_screen"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/nxp"
            android:src="@mipmap/taptag" />

        <TextView
            android:id="@+id/textTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/reset_memory"
            android:textColor="#000000"
            android:textSize="22sp" />
    </LinearLayout>

    <!--
         <Spinner
        android:id="@+id/ResetType_Spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="false" />
    -->

</RelativeLayout>